# Cost-Effective-ECG-Machine

ECG-Project/: README.md
ECG-Project/ENSC351-ECG-Project/: CMakeLists.txt  ecg_log.csv  ecg_plot_actual.py  plot.py
ECG-Project/ENSC351-ECG-Project/app/: CMakeLists.txt
ECG-Project/ENSC351-ECG-Project/app/src/: main.c
ECG-Project/ENSC351-ECG-Project/hal/: CMakeLists.txt
ECG-Project/ENSC351-ECG-Project/hal/include/: adc.h  udp.h
ECG-Project/ENSC351-ECG-Project/hal/src/: adc.c  udp.c
